Fix overflow in slideshow

--- a/style.css
+++ b/style.css
@@ -194,13 +194,18 @@ body {
   position: relative;
   margin: auto;
   height: 700px;
+  overflow: hidden;
 }
 
 .mySlides {
   display: none;
   border: solid 1px black;
-  overflow: hidden;
+  
    
+}
+
+.slide-img {
+  padding-bottom: 30px;
 }
 
 .prev,
@@ -239,7 +244,6 @@ body {
   font-size: 15px;
   padding-top: 12px;
   padding-bottom: 12px;
-  margin-top: 100px;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -286,6 +290,7 @@ body {
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+
 }
 
 @media only screen and (max-width: 1200px) {
